# persiste

./: .gitignore  README.md  REPOSITORY_STRUCTURE.md  environment.yml  pyproject.toml  requirements.txt  test_runner.py
docs/: BENCHMARK_RESULTS.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  ROBUSTNESS_WORK_SUMMARY.md  RUST_IMPLEMENTATION_PLAN.md
docs/benchmarks/: ECOLI_FULL_ANALYSIS.md  GLOOME_COMPARISON.md  README.md  SCALING_SUMMARY.txt  TOOL_COMPARISON_FINAL.md  compare_all_tools.py  compare_full_ecoli.py  compare_tools_real_data.py  test_gloome_scaling.py  test_gloome_strain_scaling.py
docs/development/: PHASE_1_2_COMPLETE.md  README.md  RUST_IMPLEMENTATION_GUIDE.md  RUST_INTEGRATION_COMPLETE.md  SAMPLING_ANALYSIS.md  SAMPLING_BIAS_DOCUMENTATION.md
examples/: assembly_demo.py  assembly_dynamics_demo.py  assembly_interface_demo.py  assembly_model_comparison.py  assembly_observation_demo.py  assembly_plot_scaling.py  assembly_validation_fixed.py  assembly_validation_improved.py
examples/genecontent/: basic_example.py
recipes/: README.md  __init__.py  gene_dosage_effect.py
rust/: Cargo.toml  README.md  build.sh  build_output.txt  pyproject.toml
rust/src/: distance.rs  lib.rs  pruning.rs  tree.rs
rust/src/assembly/: baseline.rs  cache_manager.rs  constraint.rs  gillespie.rs  mod.rs  path_stats.rs  state.rs  topology_guard.rs
src/persiste/: __init__.py  cli.py
src/persiste/core/: __init__.py  baseline.py  constraint_utils.py  constraints.py  data.py  inference.py  observation_models.py  optimization_jax.py  pruning.py  pruning_jax.py  pruning_rust.py  simulation.py  states.py  tip_observations.py  transition_cache.py  transitions.py  tree_building.py  tree_inference.py  tree_utils.py  trees.py
src/persiste/inference/: __init__.py
src/persiste/likelihood/: __init__.py
src/persiste/models/: __init__.py
src/persiste/plugins/: __init__.py  base.py  registry.py  sdk.py
src/persiste/viz/: __init__.py
tests/: __init__.py  test_constraints.py  test_core.py  test_facilitation_policy.py  test_inference_architecture.py  test_mle_inference.py  test_plugins.py  test_sparsity_modes.py
tests/core/: benchmark_phase1_optimizations.py  debug_rust.py  run_simulation_tests.py  test_baseline.py  test_constraints.py  test_core_inference.py  test_jax_pruning.py  test_pruning_rust.py  test_rust_integration.py  test_simulation.py  test_transition_cache.py  test_tree_building.py  test_trees_newick.py
tests/plugins/assembly/: __init__.py  test_assembly_state.py  test_basics.py  test_interface.py  test_positive_signal.py  test_recipe_context_sensitivity.py  test_recipe_founder_persistence.py  test_recipe_symmetry_discrimination.py  test_robustness_edge_cases.py  test_robustness_reboot.py  test_rust_interface.py  test_safety_checks.py  test_screening_features.py  test_state_id_resolver.py  test_symmetry_breaks.py
tests/plugins/copynumber/: __init__.py  test_basics.py  test_optional_tree.py  test_simulation_recovery.py  test_structural_validation.py
tests/plugins/genecontent/: __init__.py  benchmark_rust_validation.py  test_baselines.py  test_constraints.py  test_data_loaders.py  (+8 more)
(+296 files in other folders)
